# mlOps_mnist

./: .gitignore  Makefile  README.md  data.dvc  predict.dockerfile  pyproject.toml  requirements.txt  sweep.yaml  trainer.dockerfile
.dvc/: config
.github/workflows/: codecheck.yml  tests.yml
docs/: mkdocs.yaml
docs/source/: index.md
mlOps_mnist/: __init__.py  predict_model.py  train_model.py
mlOps_mnist/config/: default_config.yaml
mlOps_mnist/config/model/: model1.yaml
mlOps_mnist/data/: make_dataset.py
mlOps_mnist/models/: model.py  model_lightning.py  model_train_ligthning.py  predict_model.py  train_model.py
mlOps_mnist/visualizations/: visualize.py
tests/: test_data.py  test_model.py  test_training.py
