[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlOps_mnist"
version = "0.0.1"
description = "Machine Learning Operations course MNIST project"
authors = [
  { name = "Pawel Pieta", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlOps_mnist"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]